name:                docs-deploy
version:             0.1.0.0
synopsis:            A small program deploy docs of a repo to Github
-- description:
homepage:            https://github.com/CodeBlock/docs-deploy
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2014 Ricky Elrod
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable docs-deploy
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                     , filepath >= 1.3 && < 2
                     , shelly >= 1.5 && < 2
                     , text >= 1 && < 2
                     , transformers >= 0.3 && < 0.5
  -- hs-source-dirs:
  default-language:    Haskell2010